--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* ----------------------------------
 
-Template Name: Tanda - IT Solutions Template
+Template Name: Frontall USA
 Author: validtheme
 Description:
 Version: 1.7
